# infapo

./: .gitignore
clickhouse/: README.md  docker-compose.yml  seccomp.json
clickhouse-monitoring/: docker-compose.yml  seccomp.json
clickhouse/config/: config.xml  keeper01.xml  keeper02.xml  keeper03.xml  users.xml
cloudbeaver/: docker-compose.yml
docker-prometheus-exporter/: docker-compose.yml
filebrowser/: docker-compose.yml
filebrowser/config/: settings.json
filebrowser/data/: mapping_metrics.awk
grafana/: docker-compose.yml  seccomp.json
grafana/config/: grafana.ini
kafka/: docker-compose.yml  seccomp.json
kafka-ui/: docker-compose.yml
kafka-ui/config/: kafka-ui.yml
kafka/config/: client.properties  kafka-server-jaas.conf  server.properties
minio/: docker-compose.yml
nginx/: docker-compose.yml  seccomp.json
nginx/config/: nginx.conf
nginx/pages/: clickhouse.md  data.jsonl  kafka.md  minio.md  quote-tools.md  quotes.md  redis.md
node-exporter/: docker-compose.yml
prometheus/: docker-compose.yml  seccomp.json
prometheus/config/: blackbox.yml  prometheus.yml
quote-tools/: README.md
quote-tools/quote-ch/: README.MD  go.mod  main.go
quotes-ctl/: Cargo.toml  Makefile
quotes-ctl/.cargo/: config.toml
quotes-ctl/src/: clickhouse.rs  config.rs  kafka_admin.rs  main.rs
quotes-ctl/src/cmd/: backup_and_create.rs  create_if_not_exists.rs  disable.rs  enable.rs  generate.rs  history_reload.rs  mod.rs  rebuild_ohlc.rs  status.rs
redis/: docker-compose.yml
redisinsight/: docker-compose.yml
sqlpad/: docker-compose.yml
(+45 files in other folders)
