[package]
name = "quotes-ctl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rskafka = { version = "0.5", features = ["transport-tls"] }
rustls = { version = "0.21", features = ["dangerous_configuration"] }
chrono = { version = "0.4", default-features = false, features = ["now"] }

[profile.release]
strip = true
lto = true
opt-level = "z"
